opam-version: "2.0"
version: "0.1.0"
synopsis: "naive-bench -- A simple bench template"
description: """
run producted bins to test zmq ipc & inproc perfs for Push/Pull typed socks
"""
maintainer: [
  "Matthieu Gosset <matthieu.gosset.dev@outlook.com>"
]
authors: [
  "Matthieu Gosset <matthieu.gosset.dev@outlook.com>"
]
license: "MIT"
homepage: "https://github.com/aeghost/naive-bench"
doc: [
  "https://github.com/aeghost/naive-bench/README.md"
]
bug-reports: "https://github.com/aeghost/naive-bench/issues"
dev-repo: "git+https://github.com/aeghost/naive-bench"
depends: [
  "dune" {>= "3.4.1"}
  "fmt" {>= "0.9.0"}
  "eio" {>= "0.7.0"}
  "eio_main" {>= "0.7.0"}
  "lwt_eio" {>= "0.2"}
  "merlin" {}
  "ocaml-lsp-server" {}
  "ocp-indent" {}
  "lwt_ppx" {>= "2.0.3"}
  "ppx_deriving" {>= "5.2.1"}
  "zmq" {>= "5.1.5"}
  "zmq-lwt" {>= "5.1.5"}
]
build: [
  "dune" "build" "-p" name "-j" jobs "--profile" "release"
]
